--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies and build Angular app
         run: |
           npm install
-          npm run build -- --prod
+          npm run build --prod
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.10
