--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -33,4 +33,4 @@ jobs:
             cd /var/www/frontend
             rm -rf *
             echo "Copying frontend files..."
-            scp -r -o StrictHostKeyChecking=no ${{ github.workspace }}/* ubuntu@${{ secrets.EC2_HOST }}:/var/www/frontend
+            scp -r -o StrictHostKeyChecking=no ${{ github.workspace }}/dist/vamsi-store-frontend/* ubuntu@${{ secrets.EC2_HOST }}:/var/www/frontend
