--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -30,8 +30,8 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # 1. Create directory if it doesn't exist (important!)
             ssh ubuntu@${{ secrets.EC2_HOST }} "sudo mkdir -p /var/www/html"
 
-            # 2. Deploy with rsync (Highly Recommended)
             rsync -avz --delete -e "ssh" ${{ github.workspace }}/dist/vamsi-store-frontend/ ubuntu@${{ secrets.EC2_HOST }}:/var/www/html
+
+            ssh ubuntu@${{ secrets.EC2_HOST }} "sudo systemctl restart nginx" # Or your web server
