--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -20,8 +20,13 @@ jobs:
 
       - name: Install dependencies and build Angular app
         run: |
+          rm -rf dist/
           npm install
           npm run build --prod
+
+      - name: Debug GitHub Actions Workspace
+        run: ls -R /home/runner/work/vamsi-store-frontend/vamsi-store-frontend/
+
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.10
